# tagliacarte

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
core/: Cargo.toml
core/src/: config.rs  lib.rs  message_id.rs  net.rs  uri.rs
core/src/json/: error.rs  handler.rs  indent.rs  mod.rs  number.rs  parser.rs  writer.rs
core/src/localstorage/: mailbox_name_codec.rs  mod.rs
core/src/localstorage/index/: mod.rs
core/src/localstorage/maildir/: filename.rs  mod.rs  uidlist.rs
core/src/localstorage/mbox/: mod.rs
core/src/mime/: base64.rs  body_extract.rs  content_disposition.rs  content_id.rs  content_type.rs  handler.rs  mime_version.rs  mod.rs  parameter.rs  parser.rs  quoted_printable.rs  rfc2047.rs  utils.rs
core/src/mime/rfc5322/: address_parser.rs  date_time.rs  email_address.rs  handler.rs  message_id_list.rs  mod.rs  obsolete.rs  thread_headers.rs
core/src/oauth/: flow.rs  mod.rs  provider.rs  token_store.rs
core/src/protocol/: mod.rs
core/src/protocol/graph/: connection.rs  json_handlers.rs  mod.rs  requests.rs
core/src/protocol/http/: client.rs  connection.rs  handler.rs  mod.rs  request.rs  response.rs
core/src/protocol/http/h1/: mod.rs  parser.rs
core/src/protocol/http/h2/: frame.rs  handler.rs  mod.rs  parser.rs  writer.rs
core/src/protocol/http/hpack/: decoder.rs  encoder.rs  huffman.rs  mod.rs  static_table.rs
core/src/protocol/imap/: client.rs  mod.rs
core/src/protocol/matrix/: connection.rs  crypto.rs  crypto_store.rs  device.rs  encrypted_attachments.rs  json_handlers.rs  key_backup.rs  mod.rs  requests.rs  types.rs  verification.rs
core/src/protocol/nntp/: client.rs  mod.rs
core/src/protocol/nostr/: cache.rs  crypto.rs  keys.rs  media.rs  mod.rs  relay.rs  types.rs
core/src/protocol/pop3/: client.rs  mod.rs
core/src/protocol/smtp/: build_mime.rs  client.rs  dot_stuffer.rs  mod.rs
core/src/protocol/websocket/: client.rs  connection.rs  frame.rs  handler.rs  handshake.rs  mod.rs
core/src/sasl/: mechanism.rs  mod.rs  plain.rs  scram.rs  xoauth2.rs
core/src/store/: error.rs  folder.rs  kinds.rs  message.rs  mod.rs  send_session.rs  store.rs  transport.rs
core/tests/: http_integration.rs
ffi/: Cargo.toml
ffi/include/: tagliacarte.h
ffi/src/: lib.rs
icons/: icon.icns
scripts/: gen-icons.sh
test_data/maildir/: .uidlist  README.md
test_data/maildir/new/: 1733356800.1000.local  1733356860.1001.local  1733356920.1002.local  1733356980.1003.local
ui/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  CidTextBrowser.h  ComposeDialog.cpp  ComposeDialog.h  Config.cpp  Config.h  EmojiPicker.cpp  EmojiPicker.h  EventBridge.cpp  EventBridge.h  FlowLayout.cpp  FlowLayout.h  FolderDropTreeWidget.h  IconUtils.cpp  IconUtils.h  MainController.cpp  MainController.h  MessageDragTreeWidget.h  README.md  SettingsPage.cpp  SettingsPage.h  Tr.h  icons.qrc  main.cpp
ui/icons/: README.md
ui/l10n/: README.md  tagliacarte_de.ts  tagliacarte_el.ts  tagliacarte_en.ts  tagliacarte_es.ts  tagliacarte_fr.ts  tagliacarte_it.ts  tagliacarte_ja.ts  tagliacarte_pt.ts  tagliacarte_ru.ts  tagliacarte_zh_CN.ts
