[package]
name = "tagliacarte_core"
version = "0.1.0"
edition = "2021"
description = "Core backend for tagliacarte email client: Store/Folder/Message/Transport, protocols, local storage, MIME"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
percent-encoding = "2.3"
hmac = "0.12"
md5 = { package = "md-5", version = "0.10" }
pbkdf2 = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "sync"] }
rustls = "0.22"
tokio-rustls = "0.26"
webpki-roots = "0.26"
