[package]
name = "tagliacarte_core"
version = "0.1.0"
edition = "2021"
description = "Core backend for tagliacarte email client: Store/Folder/Message/Transport, protocols, local storage, MIME"

[dependencies]
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
hmac = "0.12"
md5 = { package = "md-5", version = "0.10" }
pbkdf2 = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "macros"] }
rustls = "0.22"
url = "2.5"
tokio-rustls = "0.26"
webpki-roots = "0.26"
sha1 = "0.10"
getrandom = "0.2"
quick-xml = "0.36"
chacha20poly1305 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }