[package]
name = "tagliacarte_ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI for tagliacarte core (Store, Folder, Transport)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tagliacarte_core = { path = "../core" }
libc = "0.2"
once_cell = "1.19"
tokio = { version = "1", features = ["rt", "sync"] }
